--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "marketplace-api",
+  "name": "fido-api",
   "version": "1.0.0",
   "main": "index.ts",
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "yarn build && node dist/index.js",
+    "start": "node --experimental-specifier-resolution=node dist/src/index.js",
     "dev": "nodemon src/index.ts",
     "build": "npx tsc",
     "db:studio": "npx prisma studio",
@@ -22,13 +22,11 @@
   },
   "dependencies": {
     "@prisma/client": "^4.10.1",
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
-    "typescript": "^4.9.5"
+    "prisma": "^4.12.0",
+    "prisma-hooks": "^1.1.6"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -47,7 +45,7 @@
     "jest": "^29.4.3",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.1",
-    "prisma": "^4.10.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
