--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node --experimental-specifier-resolution=node dist/src/index.js",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon --experimental-specifier-resolution=node ./src/index.ts",
     "build": "npx tsc",
     "db:studio": "npx prisma studio",
     "db:reset": "npx prisma migrate reset",
