--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "module": "ESNext",
     "strict": true,
     "outDir": "./dist",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true
-  }
+  },
+  "ts-node": { "esm": true },
+  "lib": ["esnext"]
 }
